# 99-haskell

99-problems/: 99-problems.cabal
99-problems/src/: Problems-01-10.hs  Problems-11-20.hs  Problems-21-30.hs
edsl/: EDSL-0.hs  EDSL-05.hs  EDSL-1.hs  EDSL-2.hs  EDSL-3.hs  EDSL.hs
ftor-appl-monad/: ftor-appl-monad.cabal
ftor-appl-monad/src/lib/: ParserCombinators.hs
ftor-appl-monad/src/test/: Test.hs
io/: README.md  io.cabal
io/src/Times/: Logic.hs  Main.hs  Test.hs
io/src/Twice/: Logic.hs  Main.hs  Test.hs
io/test/Twice/: Test.hs
parser-combinators/: Main.hs  parser-combinators.cabal
parser-combinators/src/lib/: ParserCombinators.hs
parser-combinators/src/test/: Test.hs
random/utf8-indices/: Main.hs
