name:                parser-combinator-exercises
version:             1.0
synopsis:            Parser Combinator Exercises
homepage:            https://github.com/mkovacs/haskell-dojo
author:              Mate J Kovacs
maintainer:          mkovaxx@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:  Haskell2010
  build-depends:     base ==4.*
  hs-source-dirs:    src/lib/
  exposed-modules:   ParserCombinators

test-suite test
  default-language:  Haskell2010
  build-depends:     base ==4.*
                   , QuickCheck ==2.8.*
                   , parser-combinator-exercises
  type:              exitcode-stdio-1.0
  hs-source-dirs:    src/test/
  main-is:           Test.hs
